--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular2-full-stack": {
+    "mean-full-stack": {
       "root": "",
       "sourceRoot": "client",
       "projectType": "application",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular2-full-stack:build"
+            "browserTarget": "mean-full-stack:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular2-full-stack:build:production"
+              "browserTarget": "mean-full-stack:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular2-full-stack:build"
+            "browserTarget": "mean-full-stack:build"
           }
         },
         "test": {
@@ -118,7 +118,7 @@
         }
       }
     },
-    "angular2-full-stack-e2e": {
+    "mean-full-stack-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -127,11 +127,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular2-full-stack:serve"
+            "devServerTarget": "mean-full-stack:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular2-full-stack:serve:production"
+              "devServerTarget": "mean-full-stack:serve:production"
             }
           }
         },
@@ -147,5 +147,5 @@
       }
     }
   },
-  "defaultProject": "angular2-full-stack"
+  "defaultProject": "mean-full-stack"
 }
