Mongo: non standard port and data under the project folder

--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "ng": "ng",
     "build": "ng build --prod",
     "start": "node dist/server/app.js",
-    "predev": "tsc -p server",
-    "dev": "concurrently \"mongod\" \"ng serve --proxy-config proxy.conf.json --open\" \"tsc -w -p server\" \"nodemon dist/server/app.js\"",
-    "prod": "concurrently \"mongod\" \"ng build --aot --prod && tsc -p server && node dist/server/app.js\"",
+    "mongo:clear": "rimraf .private/data/db/*",
+    "mongo:start": "mongod --dbpath='.private/data/db' --port=3001",
+    "client:start": "ng serve --proxy-config proxy.conf.json --open",
+    "server:build": "tsc -p server",
+    "server:build:watch": "tsc -w -p server",
+    "server:start:dev": "nodemon dist/server/app.js",
+    "predev": "npm run server:build",
+    "dev": "concurrently -n \"mongo,proxy,server-build,server\" -c \"yellow.bold,blue.bold,red.bold,green.bold\" \"npm run mongo:start\" \"npm run client:start\" \"npm run server:build:watch\" \"npm run server:start:dev\"",
+    "client:build:prod": "ng build --aot --prod",
+    "preserver:start:prod": "npm run client:build:prod",
+    "server:start:prod": "npm run server:build && node dist/server/app.js",
+    "stage": "concurrently -n \"mongo,server\" -c \"yellow.bold,green.bold\" \"npm run mongo:start\" \"npm run server:start:prod\"",
     "test": "ng test",
     "testbe": "tsc -p server && mocha dist/server/test --exit",
     "lint": "ng lint",
@@ -77,6 +86,7 @@
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
     "protractor": "~5.4.2",
+    "rimraf": "^2.6.3",
     "sass-lint": "^1.12.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
