Refactoring npm scripts

--- a/package.json
+++ b/package.json
@@ -11,26 +11,33 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build --prod",
-    "start": "node dist/server/app.js",
+    "start": "npm run server:dev:start",
     "mongo:clear": "rimraf .private/data/db/*",
     "mongo:start": "mongod --dbpath='.private/data/db' --port=3001",
-    "client:start": "ng serve --proxy-config proxy.conf.json --open",
+    "client:start": "ng serve --proxy-config proxy.conf.json",
     "server:build": "tsc -p server",
     "server:build:watch": "tsc -w -p server",
-    "server:start:dev": "nodemon dist/server/app.js",
-    "predev": "npm run server:build",
-    "dev": "concurrently -n \"mongo,proxy,server-build,server\" -c \"yellow.bold,blue.bold,red.bold,green.bold\" \"npm run mongo:start\" \"npm run client:start\" \"npm run server:build:watch\" \"npm run server:start:dev\"",
-    "client:build:prod": "ng build --aot --prod",
-    "preserver:start:prod": "npm run client:build:prod",
-    "server:start:prod": "npm run server:build && node dist/server/app.js",
-    "stage": "concurrently -n \"mongo,server\" -c \"yellow.bold,green.bold\" \"npm run mongo:start\" \"npm run server:start:prod\"",
-    "test": "ng test",
-    "testbe": "tsc -p server && mocha dist/server/test --exit",
-    "lint": "ng lint",
-    "linthtml": "htmlhint \"client/**/*.html\"",
-    "lintscss": "sass-lint \"client/**/*.scss\" -v",
-    "lintbe": "tslint server/**/**.ts{,x}",
-    "e2e": "ng e2e"
+    "server:dev": "node --inspect=5858 -r ts-node/register ./server/app.ts",
+    "server:dev:start": "nodemon",
+    "dev": "concurrently -n \"proxy,server\" -c \"green.bold,yellow.bold\" \"npm run client:start\" \"npm run server:dev:start\"",
+    "dev:start": "concurrently -n \"mongo,app\" -c \"blue.bold,white.bold\" \"npm run mongo:start\" \"npm run dev\"",
+    "client:prod:build": "ng build --aot --prod",
+    "preserver:prod:start": "npm run client:prod:build",
+    "server:prod:start": "npm run server:build && node dist/server/app.js",
+    "stage:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run server:prod:start\"",
+    "test": "concurrently -n \"server,client\" -c \"yellow.bold,green.bold\" \"npm run mongo:waiton && npm run server:test\" \"npm run client:test\"",
+    "test:start": "concurrently -n \"mongo,app\" -c \"blue.bold,white.bold\" \"npm run mongo:start\" \"npm run test\"",
+    "mongo:waiton": "ts-node ./scripts/waiton-mongo/waiton-mongo-cli.ts mongodb://localhost:3001/angularfullstack",
+    "client:test": "ng test",
+    "client:test:start": "concurrently -n \"mongo,client\" -c \"blue.bold,green.bold\" \"npm run mongo:start\" \"npm run mongo:waiton && npm run client:test\"",
+    "server:test": "tsc -p server/tsconfig.json && mocha dist/server/test --exit",
+    "server:test:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run mongo:waiton && npm run server:test\"",
+    "lint": "concurrently -n \"client,server\" -c \"green.bold,yellow.bold\" \"npm run lint:client\" \"npm run lint:server\"",
+    "lint:client": "ng lint",
+    "lint:html": "htmlhint \"client/**/*.html\"",
+    "lint:scss": "sass-lint \"client/**/*.scss\" -v",
+    "lint:server": "tslint --project server/tsconfig.json --config tslint.json server/**/**.ts{,x} && echo-cli 'All lint rules checked with success'",
+    "e2e:start": "ng e2e"
   },
   "private": true,
   "dependencies": {
