--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mean-full-stack",
   "version": "7.2.1",
   "license": "MIT",
-  "author": "Davide Violante",
+  "author": "Pierre Raoul",
   "description": "MEAN Full Stack project built using Angular 2+, Express, Mongoose and Node.",
   "engines": {
     "node": "8.11.1",
@@ -63,9 +63,8 @@
     "morgan": "^1.9.1",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
-    "rxjs-compat": "~6.3.3",
-    "tslib": "^1.9.0",
     "tether": "^1.4.5",
+    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
