Fix server's tsconfig; add script build:clear

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "ng build --prod",
     "start": "npm run server:dev:start",
     "mongo:clear": "rimraf .private/data/db/*",
+    "build:clear": "rimraf dist/*",
     "mongo:start": "mongod --dbpath='.private/data/db' --port=3001",
     "client:start": "ng serve --proxy-config proxy.conf.json",
     "server:build": "tsc -p server",
@@ -30,7 +31,7 @@
     "mongo:waiton": "ts-node ./scripts/waiton-mongo/waiton-mongo-cli.ts mongodb://localhost:3001/angularfullstack",
     "client:test": "ng test",
     "client:test:start": "concurrently -n \"mongo,client\" -c \"blue.bold,green.bold\" \"npm run mongo:start\" \"npm run mongo:waiton && npm run client:test\"",
-    "server:test": "tsc -p server/tsconfig.json && mocha dist/server/test --exit",
+    "server:test": "npm run server:build && mocha dist/server/test --exit",
     "server:test:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run mongo:waiton && npm run server:test\"",
     "lint": "concurrently -n \"client,server\" -c \"green.bold,yellow.bold\" \"npm run lint:client\" \"npm run lint:server\"",
     "lint:client": "ng lint",
