--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../dist/server",
+    "outDir": "../dist",
     "baseUrl": "",
-    "module": "commonjs"
+    "module": "commonjs",
+    "types": []
   }
 }
