--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -2,6 +2,14 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
+    "paths": {
+      "core-js/es7/reflect": [
+        "node_modules/core-js/proposals/reflect-metadata"
+      ],
+      "core-js/es6/": [
+        "node_modules/core-js/es/"
+      ]
+    },
     "types": []
   },
   "exclude": [
