--- a/package.json
+++ b/package.json
@@ -42,61 +42,67 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "~7.2.15",
+    "@angular/common": "~7.2.15",
+    "@angular/compiler": "~7.2.15",
+    "@angular/core": "~7.2.15",
+    "@angular/forms": "~7.2.15",
+    "@angular/platform-browser": "~7.2.15",
+    "@angular/platform-browser-dynamic": "~7.2.15",
+    "@angular/router": "~7.2.15",
     "@auth0/angular-jwt": "^2.1.0",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^4.2.1",
-    "core-js": "^2.5.4",
-    "dotenv": "^6.2.0",
+    "bootstrap": "^4.3.1",
+    "core-js": "^3.0.1",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
-    "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.4.3",
+    "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.7",
     "morgan": "^1.9.1",
-    "popper.js": "^1.14.6",
-    "rxjs": "~6.3.3",
+    "popper.js": "^1.15.0",
+    "rxjs": "^6.5.2",
     "tether": "^1.4.5",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "tslib": "^1.9.3",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "~7.2.1",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/chai-http": "^3.0.5",
-    "@types/express": "^4.16.0",
-    "@types/jasmine": "~2.8.14",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.15",
+    "@angular/language-service": "~7.2.15",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/chai-http": "^4.2.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.16.1",
+    "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~8.9.4",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mocha": "^5.2.6",
+    "@types/mongoose": "^5.5.0",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^12.0.0",
     "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
-    "codelyzer": "~4.5.0",
+    "chai-http": "^4.3.0",
+    "codelyzer": "^5.0.1",
     "concurrently": "^4.1.0",
     "echo-cli": "^1.0.8",
-    "htmlhint": "^0.10.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.9",
-    "protractor": "~5.4.2",
+    "htmlhint": "^0.11.0",
+    "jasmine-core": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.0",
+    "protractor": "^5.4.2",
     "rimraf": "^2.6.3",
-    "sass-lint": "^1.12.1",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "sass-lint": "^1.13.1",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.2.4"
   }
 }
