Using Google Font Lato as default font

--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,11 @@
               "node_modules/font-awesome/css/font-awesome.min.css",
               "client/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "client/stylesheets"
+              ]
+            },
             "scripts": [
               "node_modules/tether/dist/js/tether.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
@@ -92,6 +97,11 @@
               "node_modules/font-awesome/css/font-awesome.min.css",
               "client/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "client/stylesheets"
+              ]
+            },
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/tether/dist/js/tether.min.js",
