Cross platform npm scripts: remplace '&&' by '&'

--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "dev:start": "concurrently -n \"mongo,app\" -c \"blue.bold,white.bold\" \"npm run mongo:start\" \"npm run dev\"",
     "client:prod:build": "ng build --aot --prod",
     "preserver:prod:start": "npm run client:prod:build",
-    "server:prod:start": "npm run server:build && node dist/server/app.js",
+    "server:prod:start": "npm run server:build & node dist/server/app.js",
     "stage:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run server:prod:start\"",
-    "test": "concurrently -n \"server,client\" -c \"yellow.bold,green.bold\" \"npm run mongo:waiton && npm run server:test\" \"npm run client:test\"",
+    "test": "concurrently -n \"server,client\" -c \"yellow.bold,green.bold\" \"npm run mongo:waiton & npm run server:test\" \"npm run client:test\"",
     "test:start": "concurrently -n \"mongo,app\" -c \"blue.bold,white.bold\" \"npm run mongo:start\" \"npm run test\"",
     "mongo:waiton": "ts-node ./scripts/waiton-mongo/waiton-mongo-cli.ts mongodb://localhost:3001/angularfullstack",
     "client:test": "ng test",
-    "client:test:start": "concurrently -n \"mongo,client\" -c \"blue.bold,green.bold\" \"npm run mongo:start\" \"npm run mongo:waiton && npm run client:test\"",
-    "server:test": "npm run server:build && mocha dist/server/test --exit",
-    "server:test:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run mongo:waiton && npm run server:test\"",
+    "client:test:start": "concurrently -n \"mongo,client\" -c \"blue.bold,green.bold\" \"npm run mongo:start\" \"npm run mongo:waiton & npm run client:test\"",
+    "server:test": "npm run server:build & mocha dist/server/test --exit",
+    "server:test:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run mongo:waiton & npm run server:test\"",
     "lint": "concurrently -n \"client,server\" -c \"green.bold,yellow.bold\" \"npm run client:lint\" \"npm run server:lint\"",
     "client:lint": "ng lint",
     "html:lint": "htmlhint \"client/**/*.html\"",
     "scss:lint": "sass-lint \"client/**/*.scss\" -v",
-    "server:lint": "tslint --project server/tsconfig.json --config tslint.json server/**/**.ts{,x} && echo-cli 'All lint rules checked with success'",
+    "server:lint": "tslint --project server/tsconfig.json --config tslint.json server/**/**.ts{,x} & echo-cli 'All lint rules checked with success'",
     "e2e:start": "ng e2e",
     "postinstall": "npm run fonts:install",
     "prefonts:install": "mkdirp ./client/stylesheets",
