--- a/angular.json
+++ b/angular.json
@@ -132,7 +132,7 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "protractorConfig": "e2e/out-tsc/protractor.conf.js",
             "devServerTarget": "mean-full-stack:serve"
           },
           "configurations": {
