--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@angular/platform-browser-dynamic": "~7.2.15",
     "@angular/router": "~7.2.15",
     "@auth0/angular-jwt": "^2.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
     "core-js": "^3.0.1",
@@ -66,9 +67,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.7",
     "morgan": "^1.9.1",
-    "popper.js": "^1.15.0",
     "rxjs": "^6.5.2",
-    "tether": "^1.4.5",
     "tslib": "^1.9.3",
     "zone.js": "^0.8.29"
   },
