--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.7",
     "morgan": "^1.9.1",
     "rxjs": "^6.5.2",
@@ -104,8 +105,10 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "mkdirp": "^0.5.1",
     "mocha": "^6.1.4",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.19.0",
     "protractor": "^5.4.2",
+    "request": "^2.88.0",
     "rimraf": "^2.6.3",
     "sass-lint": "^1.13.1",
     "ts-node": "^8.1.0",
