Force test mode in context not in code

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "npm run server:dev:start",
     "mongo:clear": "rimraf .private/data/db/*",
     "build:clear": "rimraf dist/*",
+    "premongo:start": "mkdirp .private/data/db",
     "mongo:start": "mongod --dbpath='.private/data/db' --port=3001",
     "client:start": "ng serve --proxy-config proxy.conf.json",
     "server:build": "tsc -p server",
@@ -31,7 +32,8 @@
     "mongo:waiton": "ts-node ./scripts/waiton-mongo/waiton-mongo-cli.ts mongodb://localhost:3001/angularfullstack",
     "client:test": "ng test",
     "client:test:start": "concurrently -n \"mongo,client\" -c \"blue.bold,green.bold\" \"npm run mongo:start\" \"npm run mongo:waiton & npm run client:test\"",
-    "server:test": "npm run server:build & mocha dist/server/test --exit",
+    "server:test:run": "cross-env NODE_ENV=test mocha dist/server/test --exit",
+    "server:test": "npm run server:build & npm run server:test:run",
     "server:test:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run mongo:waiton & npm run server:test\"",
     "lint": "concurrently -n \"client,server\" -c \"green.bold,yellow.bold\" \"npm run client:lint\" \"npm run server:lint\"",
     "client:lint": "ng lint",
@@ -93,6 +95,7 @@
     "codelyzer": "^5.0.1",
     "concurrently": "^4.1.0",
     "cpy": "^7.2.0",
+    "cross-env": "^5.2.0",
     "echo-cli": "^1.0.8",
     "goog-webfont-dl": "^1.0.2",
     "htmlhint": "^0.11.0",
