Wait server side building before running test

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "mongo:waiton": "ts-node ./scripts/waiton-mongo/waiton-mongo-cli.ts mongodb://localhost:3001/angularfullstack",
     "client:test": "ng test",
     "client:test:start": "concurrently -n \"mongo,client\" -c \"blue.bold,green.bold\" \"npm run mongo:start\" \"npm run mongo:waiton & npm run client:test\"",
-    "server:test:run": "cross-env NODE_ENV=test mocha dist/server/test --exit",
-    "server:test": "npm run server:build & npm run server:test:run",
+    "preserver:test": "npm run server:build",
+    "server:test": "cross-env NODE_ENV=test mocha dist/server/test --exit",
     "server:test:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run mongo:waiton & npm run server:test\"",
     "lint": "concurrently -n \"client,server\" -c \"green.bold,yellow.bold\" \"npm run client:lint\" \"npm run server:lint\"",
     "client:lint": "ng lint",
