Config values with joi; extract config from server/app

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:clear": "rimraf dist/*",
     "premongo:start": "mkdirp .private/data/db",
     "mongo:start": "mongod --dbpath='.private/data/db' --port=3001",
-    "client:start": "ng serve --proxy-config proxy.conf.json",
+    "client:start": "ng serve",
     "server:build": "tsc -p server",
     "server:build:watch": "tsc -w -p server",
     "server:dev": "node --inspect=5858 -r ts-node/register ./server/app.ts",
@@ -29,7 +29,7 @@
     "stage:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run server:prod:start\"",
     "test": "concurrently -n \"server,client\" -c \"yellow.bold,green.bold\" \"npm run mongo:waiton & npm run server:test\" \"npm run client:test\"",
     "test:start": "concurrently -n \"mongo,app\" -c \"blue.bold,white.bold\" \"npm run mongo:start\" \"npm run test\"",
-    "mongo:waiton": "ts-node ./scripts/waiton-mongo/waiton-mongo-cli.ts mongodb://localhost:3001/angularfullstack",
+    "mongo:waiton": "ts-node ./scripts/waiton-mongo/waiton-mongo-cli.ts",
     "client:test": "ng test",
     "client:test:start": "concurrently -n \"mongo,client\" -c \"blue.bold,green.bold\" \"npm run mongo:start\" \"npm run mongo:waiton & npm run client:test\"",
     "preserver:test": "npm run server:build",
@@ -59,6 +59,7 @@
     "@angular/platform-browser-dynamic": "~7.2.15",
     "@angular/router": "~7.2.15",
     "@auth0/angular-jwt": "^2.1.0",
+    "@hapi/joi": "^15.0.3",
     "@ng-bootstrap/ng-bootstrap": "^4.1.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
@@ -83,6 +84,7 @@
     "@types/chai-http": "^4.2.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
+    "@types/hapi__joi": "^15.0.1",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "~2.0.6",
     "@types/jsonwebtoken": "^8.3.2",
