--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-MONGODB_URI=mongodb://localhost:3001/meanfullstack
-MONGODB_TEST_URI=mongodb://localhost:3001/test
+# MONGODB_URL=mongodb://localhost:3001/meanfullstack
+# MONGODB_TEST_URL=mongodb://localhost:3001/test
+
+# API_PORT=3000
+
+MONGO_HOST=localhost
+# MONGO_PORT=3001
+# MONGO_DB_NAME=meanfullstack
+# MONGO_TEST_DB_NAME=test
+
 SECRET_TOKEN=catswillruletheworld
