--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mean-full-stack:build"
+            "browserTarget": "mean-full-stack:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
