--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongo:clear": "rimraf .private/data/db/*",
     "build:clear": "rimraf dist/*",
     "premongo:start": "mkdirp .private/data/db",
-    "mongo:start": "mongod --dbpath='.private/data/db' --port=3001",
+    "mongo:start": "ts-node ./scripts/from-env/from-env-cli.ts mongod --dbpath .private/data/db --port '$mongodb.port'",
+    "preclient:start": "ts-node ./scripts/api-proxy/setNgProxyConf.ts",
     "client:start": "ng serve",
     "server:build": "tsc -p server",
     "server:build:watch": "tsc -w -p server",
@@ -82,12 +83,14 @@
     "@angular/language-service": "~7.2.15",
     "@types/bcryptjs": "^2.4.2",
     "@types/chai-http": "^4.2.0",
+    "@types/cross-spawn": "^6.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/hapi__joi": "^15.0.1",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "~2.0.6",
     "@types/jsonwebtoken": "^8.3.2",
+    "@types/lodash": "^4.14.132",
     "@types/mocha": "^5.2.6",
     "@types/mongoose": "^5.5.0",
     "@types/morgan": "^1.7.35",
