--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "morgan": "^1.9.1",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.3",
-    "zone.js": "^0.8.29"
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
