--- a/package.json
+++ b/package.json
@@ -122,6 +122,6 @@
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.2.4"
+    "typescript": ">=3.1.1 <3.3"
   }
 }
