--- a/package.json
+++ b/package.json
@@ -51,50 +51,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.15",
-    "@angular/common": "~7.2.15",
-    "@angular/compiler": "~7.2.15",
-    "@angular/core": "~7.2.15",
-    "@angular/forms": "~7.2.15",
-    "@angular/platform-browser": "~7.2.15",
-    "@angular/platform-browser-dynamic": "~7.2.15",
-    "@angular/router": "~7.2.15",
+    "@angular/animations": "~8.0.0",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
+    "@angular/forms": "~8.0.0",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/router": "~8.0.0",
     "@auth0/angular-jwt": "^2.1.0",
     "@hapi/joi": "^15.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^4.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
-    "core-js": "^3.0.1",
+    "core-js": "^3.1.3",
     "dotenv": "^8.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
-    "mongoose": "^5.5.7",
+    "mongoose": "^5.5.12",
     "morgan": "^1.9.1",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.3",
-    "zone.js": "0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "~7.3.9",
-    "@angular/compiler-cli": "~7.2.15",
-    "@angular/language-service": "~7.2.15",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.1",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/language-service": "~8.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/chai-http": "^4.2.0",
     "@types/cross-spawn": "^6.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/hapi__joi": "^15.0.1",
-    "@types/jasmine": "^3.3.12",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/lodash": "^4.14.132",
-    "@types/mocha": "^5.2.6",
-    "@types/mongoose": "^5.5.0",
+    "@types/lodash": "^4.14.133",
+    "@types/mocha": "^5.2.7",
+    "@types/mongoose": "^5.5.3",
     "@types/morgan": "^1.7.35",
-    "@types/node": "^12.0.0",
+    "@types/node": "^12.0.4",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "codelyzer": "^5.0.1",
@@ -114,14 +114,14 @@
     "mkdirp": "^0.5.1",
     "mocha": "^6.1.4",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.19.0",
+    "nodemon": "^1.19.1",
     "protractor": "^5.4.2",
     "request": "^2.88.0",
     "rimraf": "^2.6.3",
     "sass-lint": "^1.13.1",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.16.0",
+    "ts-node": "^8.2.0",
+    "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": ">=3.1.1 <3.3"
+    "typescript": ">=3.4 <3.5"
   }
 }
