Fix sync issue in scrip server:prod:start

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "dev": "concurrently -n \"proxy,server\" -c \"green.bold,yellow.bold\" \"npm run client:start\" \"npm run server:dev:start\"",
     "dev:start": "concurrently -n \"mongo,app\" -c \"blue.bold,white.bold\" \"npm run mongo:start\" \"npm run dev\"",
     "client:prod:build": "ng build --aot --prod --stats-json",
-    "preserver:prod:start": "npm run client:prod:build",
-    "server:prod:start": "npm run server:build & node dist/server/app.js",
+    "preserver:prod:start": "concurrently -n \"server-build,client-build\" -c \"green.bold,cyan.bold\" \"npm run server:build\" \"npm run client:prod:build\"",
+    "server:prod:start": "node dist/server/app.js",
     "stage:start": "concurrently -n \"mongo,server\" -c \"blue.bold,yellow.bold\" \"npm run mongo:start\" \"npm run server:prod:start\"",
     "test": "concurrently -n \"server,client\" -c \"yellow.bold,green.bold\" \"npm run mongo:waiton & npm run server:test\" \"npm run client:test\"",
     "test:start": "concurrently -n \"mongo,app\" -c \"blue.bold,white.bold\" \"npm run mongo:start\" \"npm run test\"",
